--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "prisma": "^6.16.2",
     "react": "19.1.0",
